--- a/trip-itinerary/src/styles/TripPreview.css
+++ b/trip-itinerary/src/styles/TripPreview.css
@@ -40,7 +40,7 @@
 }
 
 .trips-carousels {
-    margin: 50px 100px;
+    margin: 10px 100px;
 }
 
 .image-container {
